[project]
name = "safeparse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apsw>=3.50.2.0",
    "bcrypt>=4.3.0",
    "beaupy>=3.10.1",
    "cryptography>=45.0.5",
    "passlib[bcrypt]>=1.7.4",
    "prompt-toolkit>=3.0.51",
    "rich>=14.0.0",
    "simple-term-menu>=1.6.6",
    "textual>=3.7.1",
]
