[project]
name = "safeparse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apsw>=3.50.2.0",
    "bcrypt>=4.3.0",
    "beaupy>=3.10.1",
    "black>=25.1.0",
    "passlib[bcrypt]>=1.7.4",
    "prompt-toolkit>=3.0.51",
    "pydeps>=3.0.1",
    "pylint>=3.3.7",
    "python-gnupg>=0.5.5",
    "rich>=14.0.0",
    "simple-term-menu>=1.6.6",
    "textual>=3.7.1",
]
